--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "expo": "~48.0.18",
+    "expo-dev-client": "^2.2.1",
+    "expo-document-picker": "^11.2.2",
+    "expo-file-system": "^15.2.2",
+    "expo-sharing": "^11.2.2",
+    "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
